Fix dropdown item alignment

--- a/assets/stylesheets/common/_header.scss
+++ b/assets/stylesheets/common/_header.scss
@@ -120,7 +120,7 @@ $menu-bgcolor: #24292d;
 				a {
 					color: #fff;
 					font-size: 14px;
-					padding: 5px 20px;
+					padding: 5px 25px;
 					&.signout {
 						border-top: solid 1px #777777;
 						padding: 10px 25px;
